--- a/c.html
+++ b/c.html
@@ -4,7 +4,7 @@
         <title>c programming</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="programminghome.css" rel="stylesheet">
+        <link href="submain.css" rel="stylesheet">
     </head>
     <body>
          <header>
@@ -48,10 +48,10 @@
        🧠 Mini Projects —  Apply concepts in real small projects to boost confidence<br>
        🎥 Tutorial Videos — Visual learning for easy understanding</p>
 </section>
-    <a href="ctheory.html"><div class="div2">C LEARN</a></div>
-    <a href="cpractical.html"><div class="div2">C PRACTICAL</a></div>
-   <a href="cprojects.html"> <div class="div2">C PROJECTS</a></div>
-   <a href="ctutorialvid.html"> <div class="div2">C TUTORIAL VIDEO</a></div>
+    <a href="ctheory.html"><div class="div2">C LEARN</div></a>
+    <a href="cpractical.html"><div class="div2">C PRACTICAL</div></a>
+   <a href="cprojects.html"> <div class="div2">C PROJECTS</div></a>
+   <a href="ctutorialvid.html"> <div class="div2">C TUTORIAL VIDEO</div></a>
    <a href="#"><div class="div2">PRACTICE LIVE CODE</div></a>
     </div>
     <h3 class="end">🌱 Start with C. Build your logic. Unlock the world of coding.</h3>
