--- a/css.html
+++ b/css.html
@@ -4,7 +4,7 @@
         <title>CSS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="programminghome.css" rel="stylesheet">
+        <link href="submain.css" rel="stylesheet">
     </head>
     <body>
          <header>
@@ -56,8 +56,9 @@
             </section>
             <a href="csstheory.html"><div class="div2">CSS LEARN</div></a>
             <a href="csspractical.html"><div class="div2">CSS PRACTICAL</div></a>
-            <a href="csstutorial.html"><div class="div2">TUTORIAL</div></a>
-            <a href="#"><div class="div2">PRACTICE LIVE CODE</div></a>
+            <a href="cssprojects.html"><div class="div2">CSS PROJECTS</div></a>
+            <a href="csstutorial.html"><div class="div2"> CSS TUTORIAL VIDEO</div></a>
+            <a href="csspracticelivecode.html"><div class="div2">PRACTICE LIVE CODE</div></a>
             </div>
        
             <h3> <div class="end">🌱 Start small, grow beautifully. CSS is your secret power to turn code into creativity.</div></h3>
