--- a/html1introduction.html
+++ b/html1introduction.html
@@ -10,7 +10,6 @@
         <div class="main">
    <h1>HTML INTRODUCTION (Hypertext Markup Language)</h1>
     <h2>What is HTML?</h2>
-    <div class="subdiv">
         <ul>
             <li>HTML stands for <b>HyperText Markup Language.</b></li>
             <li>HTML is <strong>not a programming language</strong> - it's a <b>markup language.</b></li>
@@ -64,6 +63,16 @@
 <div class="option">
 <a href="html1introductionmcq.html">HTML INTRODUCTION EXERCISE</a>
 </div>
+<div class="option">
+<a href="html1intropracticalexamples.html">HTML INTRODUCTION PRACTICAL EXAMPLES</a>
+</div>
+<div class="option">
+<a href="html1intropracticalquestions.html">HTML INTRODUCTION PRACTICAL EXERCISE</a>
+</div>
+<div class="option">
+<a href="html1intropracticalexamples.html">HTML INTRODUCTION MINI PROJECT QUESTIONS</a>
+</div>
+
 
 </div>
 <br><br>
