--- a/html1intropractical.html
+++ b/html1intropractical.html
@@ -4,42 +4,7 @@
         <title>HTML PRACTICAL</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <style>
-            body{
-                text-align: center;
-                background-color:#4c2358;
-                font-family:helvetica;
-            }
-            h1{
-                color:#25042f;
-                background-color:rgb(229, 178, 239);
-                border-radius: 10px;
-            }
-            a{
-                text-decoration: none;
-                font-size: 25px;
-                margin: 10px;
-                 color:rgb(234, 214, 238);
-
-            }
-            .main{
-                margin: 20px;
-                padding:50px;
-
-            }
-            .div1{
-                padding: 5px;
-                margin: 20px;
-                background-color: #25042f;
-                border-radius: 10px;
-            }
-            .div1:hover{
-                background-color: #752d8a;
-            }
-            
-            
-        </style>
+        <link href="practical.css" rel="stylesheet">
     </head>
     <body>
     <h1>HTML PRACTICAL</h1>
@@ -49,9 +14,6 @@
         </DIV>
         <div class="div1">
             <a href="html1intropracticalquestions.html">HTML PRACTICAL QUESTIONS</a>
-        </div>
-        <div class="div1">
-            <a href="html1intropracticalprojects.html">HTML PROJECTS</a>
         </div>
     </DIV>
     </body>
