--- a/html1intropracticalexamples.html
+++ b/html1intropracticalexamples.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
         <style>
             body{
-                 background-color:rgb(239, 225, 242); 
+                background-color: #faf2fd;
                 color: #4c2358;
                 margin:30px;
                 font-family: helvetica;
@@ -41,6 +41,8 @@
             }
             .first, .second, .third, .fourth,.fifth{
                 display: inline-flex;
+                margin: 20px;
+                background-color: #ffffff;
             }
             img{
                 width:900px;
@@ -73,7 +75,7 @@
     </pre>
 <hr>
 <h3>Output:</h3>
-<img src="html1introeg1.png">
+<img src="htmlintroeg1.png">
 <br><br><br><br>
     </div>
     <hr><br><br>
