--- a/html1intropracticalprojects.html
+++ b/html1intropracticalprojects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>PROJECTS</title>
+        <title>HTML INTRODUCTION PROJECT</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -21,14 +21,14 @@
                  background-color: #25042f;
             }
             body{
-               background-color:rgb(239, 225, 242); 
+               background-color: #faf2fd;
                 color: #4c2358;
                 margin:30px;
                 font-family: helvetica;
             }
             h1{
                 font-size: 50px;
-                color: rgb(239, 225, 242);
+                text-align: center;
             }
             h1 {
     font-size: 3rem;
@@ -42,11 +42,11 @@
         </style>
     </head>
     <body>
-    <h1>PROJECTS</h1>
+    <h1>HTML INTRODUCTION</h1>
     <div class="hoverc">
    <a href="html1introprojectexamplesforpractice.html">PROJECT EXAMPLES FOR PRACTICE</a></div>
    <div class="hoverc">
-   <a href="html1introprojectpracticequestion.html">PRACTICE QUESTIONS</a>
+   <a href="html1introprojectpracticequestion.html"> PROJECT PRACTICE QUESTIONS</a>
    </div>
     </body>
 </html>
