--- a/html1intropracticalquestions.html
+++ b/html1intropracticalquestions.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HTML PRACTICAL QUESTIONS</title>
+        <title>HTML INTRODUCTION PRACTICAL EXERCISE</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="html1intropracticalquestions.css" rel="stylesheet">
      </head>
     <body>
-    <h1>HTML PRACTICAL QUESTIONS</h1>
+    <h1>HTML INTRODUCTION PRACTICAL EXERCISE</h1>
     <!--Question 1-->
     <div class="question">
     <h4>Q.1: Complete the blank in this line</h4>
