--- a/html1introprojectexamplesforpractice.html
+++ b/html1introprojectexamplesforpractice.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
         <style>
             body{
-                background-color:rgb(239, 225, 242); 
+                background-color: #faf2fd;
                 color: #4c2358;
                 margin:30px;
                 font-family: helvetica;
@@ -19,14 +19,14 @@
                 border-radius:40px;
             }
             div{
-                background-color:rgb(235, 208, 241) ;
+                background-color: #ffffff;
                 margin:10px;
                 padding: 10px;
                 border-radius: 20px;
             }
             button{
                
-                padding:8px ;
+                padding:8px;
                 font-size: 15px;
                 margin: 1px;
                 cursor: pointer;
