--- a/html6formatting.html
+++ b/html6formatting.html
@@ -4,26 +4,30 @@
         <title>HTML FORMATTING</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="html6formatting.css" rel="stylesheet">
+        <link href="learn.css" rel="stylesheet">
     </head>
     <body>
+        <div class="main">
     <h1>HTML FORMATTING</h1>
-    <p>HTML provides a set of <strong>formatting tags</strong> that allow you to style
+    <ul>
+    <li>HTML provides a set of <strong>formatting tags</strong> that allow you to style
          and emphasize parts of the text to make content 
-         more readable, meaningful, and attractive.
-          These tags are often used to<strong>highlight importance,
+         more readable, meaningful, and attractive.</li>
+         <li>These tags are often used to <strong>highlight importance,
              show deletions or insertions, emphasize text, or display scientific
-              notation.</strong></p>
-              <br><br><hr>
+              notation.</strong></li>
+            </ul>
               <ol>
-                <li><span>&lt;b&gt;</span> <b>- Bold</b></li>
+                <h3>&lt;b&gt;<b>- Bold</b></h3>
                 <ul>
                     <li>Makes the text bold.</li>
                     <li>Does <b>not</b> add sematic meaning.</li>
                 </ul>
-                <div>
+                <div class="code">
+                <pre>
                     <p>html</p>
-                    &lt;p&gt;This is &lt;b&gt;Bold&lt;/b&gt; text.&lt;/p&gt;
+&lt;p&gt;This is &lt;b&gt;Bold&lt;/b&gt; text.&lt;/p&gt;
+</pre>
                 </div>
                 <div>
                 <h4>Output:</h4>
@@ -149,6 +153,7 @@
                         x<sup>2</sup>
                     </div>
               </ol>
+              </div>
               <br>
               <br>
               <a href="html6formattingmcqquestions.html">HTML FORMATTING EXERCISE</a>
