--- a/java.html
+++ b/java.html
@@ -14,22 +14,22 @@
     <div class="hoverc"><a href="html.html">HTML</a></div>
     <div class="hoverc"><a href="css.html">CSS</a></div>
    <div class="hoverc"> <a href="javascript.html">JAVASCRIPT</a></div>
-    <div class="hoverc"><a href="c.html" >C</a></div>
-    <div class="hoverc"><a href="cpp.html" class="background">C++</a></div>
+    <div class="hoverc"><a href="c.html">C</a></div>
+    <div class="hoverc"><a href="cpp.html">C++</a></div>
      <div class="hoverc"><a href="python.html">PYTHON</a></div>
-    <div class="hoverc"><a href="java.html">JAVA</a></div>
+    <div class="hoverc"><a href="java.html" class="background">JAVA</a></div>
    <div class="hoverc"><a href="sql.html">SQL</a></div>
 </div>
    </nav>
    </header>
-    <h1>C++ </h1>
+    <h1>Java</h1>
     <div class="page">
     <section>
-    <h2>💻 Why You Should Learn C++</h2>
+    <h2>💻 Why You Should Learn Java</h2>
     <p></p>
     </section>
     <section>
-    <h2>🚀 Benefits of Learning C++</h2>
+    <h2>🚀 Benefits of Learning Java</h2>
     <h3></h3>
     <p></p>
     <h3></h3>
@@ -48,12 +48,12 @@
        🧠 Mini Projects —  <br>
        🎥 Tutorial Videos — </p>
 </section>
-    <a href="c++theory.html"><div class="div2">C++ LEARN</div></a>
-   <a href="c++practical.html"> <div class="div2">C++ PRACTICAL</div></a>
-    <a href="c++projects.html"><div class="div2">C++ PROJECTS</div></a>
-    <a href="c++tutorialvid.html"><div class="div2">C++ TUTORIAL VIDEO</div></a>
-    <a href="#"><div class="div2">PRACTICE LIVE CODE</div></a>
+    <a href="javatheory.html"><div class="div2">JAVA LEARN</div></a>
+   <a href="javapractical.html"> <div class="div2">JAVA PRACTICAL</div></a>
+    <a href="javaprojects.html"><div class="div2">JAVA PROJECTS</div></a>
+    <a href="javatutorialvid.html"><div class="div2">JAVA TUTORIAL VIDEO</div></a>
+    <a href="javapracticelivecode.html"><div class="div2">PRACTICE LIVE CODE</div></a>
 </div>
-    <h3 class="end">🌱 Start with C++. Build your logic. Unlock the world of coding.</h3>
+    <h3 class="end">🌱 Start with Java. Build your logic. Unlock the world of coding.</h3>
     </body>
 </html>
