--- a/javascript.html
+++ b/javascript.html
@@ -4,7 +4,7 @@
         <title>JavaScript</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="programminghome.css" rel="stylesheet">
+        <link href="submain.css" rel="stylesheet">
     </head>
     <body>
          <header>
@@ -56,6 +56,7 @@
 <h2 style="text-align:center;">🧭 Choose What You Want to Do:</h2>
     <a href="javascripttheory.html"><div class="div2">JAVASCRIPT LEARN</div></a>
    <a href="javascriptpractical.html"><div class="div2">JAVASCRIPT PRACTICAL</div></a>
+   <a href="javascriptprojects.html"><div class="div2">JAVASCRIPT PROJECTS</div></a>
     <a href="javascripttutorial.html"><div class="div2">JAVASCRIPT TUTORIAL</div></a>
    <a href="practicecode.html"> <div class="div2">PRACTICE LIVE CODE</div></a>
     </div>
