--- a/projects.html
+++ b/projects.html
@@ -4,25 +4,15 @@
         <title>PROJECTS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="index.css" rel="stylesheet">
+        <link href="submain.css" rel="stylesheet">
     </head>
     <body>
-      <header>
-        <img src="nkmain (2).png" alt="NK LOGO">
-        <nav class="menu">
-      <div class="hoverc1">
-        <a href="index.html"><div class="hoverc">HOME</div></a>
-        <a href="subjects.html"><div class="hoverc">SUBJECTS</div></a>
-        <a href="html.html"><div class="hoverc">PROGRAMMING</div></a>
-        <a href="projects.html"><div class="hoverc">PROJECTS</div></a>
-        <a href="#"><div class="hoverc">NOTES</div></a>
-        <a href="roadmap.html"></a><div class="hoverc">ROADMAPS</div></a>
-        <a href="about.html"></a><div class="hoverc">ABOUT</div></a>
-        <a href="blogs.html"><div class="hoverc">BLOGS</div></a>
-        <a href="contact.html"><div class="hoverc">CONTACT</div></a>
-      </div>
-      </nav>
-    </header>
-    
+    <div class="main">
+    <h1>Projects</h1>
+      <a href="#"><div class="div2">Beginner Level Projects</div></a>      
+      <a href="#"><div class="div2">Intermediate Level Projects</div></a>      
+      <a href="#"><div class="div2">Advanced Level Projects</div></a>      
+
+    </div>
     </body>
 </html>
