--- a/subjects.html
+++ b/subjects.html
@@ -4,54 +4,23 @@
         <title>SUBJECTS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="index.css" rel="stylesheet">
-        <style>
-            .line{
-                color: purple;
-                background-color: rgb(204, 165, 220);
-                margin-bottom: 50px;
-                border-radius: 20px;
-            }
-            .line:hover{
-                color:darkviolet;
-            }
-            .sub1{
-               background-color: rgb(103, 23, 103);
-               text-align: center;
-               padding: 5px;
-               margin: 20px;
-
-
-            }
-        </style>
+        <link href="submain.css" rel="stylesheet">
     </head>
     <body>  
       <header>
-        <img src="nkmain (2).png" alt="NK LOGO">
-        <nav class="menu">
-      <div class="hoverc1">
-        <a href="index.html"><div class="hoverc">HOME</div></a>
-        <a href="subjects.html"><div class="hoverc">SUBJECTS</div></a>
-        <a href="html.html"><div class="hoverc">PROGRAMMING</div></a>
-        <a href="projects.html"><div class="hoverc">PROJECTS</div></a>
-        <a href="#"><div class="hoverc">NOTES</div></a>
-        <a href="roadmap.html"></a><div class="hoverc">ROADMAPS</div></a>
-        <a href="about.html"></a><div class="hoverc">ABOUT</div></a>
-        <a href="blogs.html"><div class="hoverc">BLOGS</div></a>
-        <a href="contact.html"><div class="hoverc">CONTACT</div></a>
-      </div>
-    </header>
+        <img src="nkmain (2).png" alt="NK LOGO" width="150px">
     <h1>SUBJECTS</h1>
-    <div class="sub1">
-<a href="#" ><div class="line"> Fundamental Networks</div></a>
-<a href="#"><div class="line">Operating Systems</div></a>
-<a href="#">DSA</a>
-<a href="#">SSAD</a>
-<a href="#">DBMS</a>
-<a href="#">ADBMS</a>
-<a href="#">Software Testing Quality Assurance</a>
-<a href="#">Linux</a><br>
-<a href="#">Cloud Technology</a>
+  </header>
+    <div class="main">
+<a href="#" ><div class="div2"> Fundamental Networks</div></a>
+<a href="#"><div class="div2">Operating Systems</div></a>
+<a href="#"><div class="div2">DSA</div></a>
+<a href="#"><div class="div2">SSAD</div></a>
+<a href="#"><div class="div2">DBMS</div></a>
+<a href="#"><div class="div2">ADBMS</div></a>
+<a href="#"><div class="div2">Software Testing Quality Assurance</div></a>
+<a href="#"><div class="div2">Linux</div></a>
+<a href="#"><div class="div2">Cloud Technology</div></a>
     </div>
     </body>
 </html>
