--- a/html1introprojectpracticequestion.html
+++ b/html1introprojectpracticequestion.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
         <style>
              body{
-                background-color:rgb(239, 225, 242); 
+                 background-color: #faf2fd;
                 color: #4c2358;
                 margin:30px;
                 font-family: helvetica;
@@ -20,7 +20,7 @@
                 border-radius:40px;
             }
             div{
-                background-color:rgb(235, 208, 241) ;
+                background-color:rgb(255, 255, 255) ;
                 margin:10px;
                 padding: 10px;
                 border-radius: 20px;
