--- a/htmltheory.html
+++ b/htmltheory.html
@@ -4,39 +4,14 @@
         <title>HTML LEARN</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <style>
-            a {
-                color: white;
-                text-decoration: none;
-            }
-            .hoverc{
-                background-color: rgb(85, 31, 86);
-                padding: 10px;
-                border-radius: 10px;
-            }
-            .hoverc:hover{
-                 background-color: #25042f;
-            }
-         body{
-                background-color: #dabde3;
-                font-family: HELVETICA;
-                color: #4c2358;
-}
-            h1{
-                text-align: center;
-            }
-            .main{
-                text-align: center;
-            }
-        </style>
+        <link href="titles.css" rel="stylesheet">
     </head>
     <body>
     <h1>HTML(HyperText Markup Language)</h1>
     <div class="main">
     
        <a href="html1introduction.html"><div class="hoverc ">HTML INTRODUCTION</div></a>
-        <a href="html2elements.html"><div class="hoverc">HTML ELEMENTS</div></a>
+        <a href="html2elements.html"><div class="hoverc">HTML BASIC TAGS</div></a>
        <a href="html3textformatting.html"><div class="hoverc">HTML TEXT FORMATTING</div></a>
        <a href="html4lists.html"><div class="hoverc">HTML LISTS</div></a>
        <a href="html5linksandimages.html"><div class="hoverc">HTML LINKS AND IMAGES</div></a>
