--- a/python.html
+++ b/python.html
@@ -4,7 +4,7 @@
         <title>c programming</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="programminghome.css" rel="stylesheet">
+        <link href="submain.css" rel="stylesheet">
     </head>
     <body>
          <header>
