--- a/html1introduction.html
+++ b/html1introduction.html
@@ -16,7 +16,7 @@
             <li>It is used to <b>structure content</b> on the web using <b>tags.</b></li>
             <li>Web browsers like <b>Chrome</b> or <b>Firefox</b> read HTML to display text, images, buttons, and other elements.</li>
         </ul>
-    </div><br><br><hr>
+    <br><br><hr>
     <h2>Features</h2>
     <ol>
         <li>Simple and Easy to learn.</li>
@@ -70,14 +70,11 @@
 <a href="html1intropracticalquestions.html">HTML INTRODUCTION PRACTICAL EXERCISE</a>
 </div>
 <div class="option">
-<a href="html1intropracticalexamples.html">HTML INTRODUCTION MINI PROJECT QUESTIONS</a>
+<a href="html1intropracticalprojects.html">HTML INTRODUCTION MINI PROJECT QUESTIONS</a>
 </div>
-
-
 </div>
 <br><br>
 <a href="programminglanguages.html"><button>Previous</button></a>
-    <a href="html2elements.html"><button>Next chapter</button></a>
-
+    <a href="html2basictags.html"><button>Next chapter</button></a>
     </body>
 </html>
