--- a/html1intropracticalquestions.html
+++ b/html1intropracticalquestions.html
@@ -37,6 +37,7 @@
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
+&lt;title&gt;
     <input type="text" id="answer2" placeholder="Your Answer">&gt;My Website&lt;/p&gt;
     &lt;p&gt;Welcome to my page.&lt;/p&gt;
 &lt;/body&gt;
