--- a/html1introprojectexamplesforpractice.html
+++ b/html1introprojectexamplesforpractice.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>HTML PROJECT EXAMPLE FOR PRACTICE</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <style>
+ <head>
+    <title>HTML PROJECT EXAMPLE FOR PRACTICE</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+    <style>
             body{
                 background-color: #faf2fd;
                 color: #4c2358;
@@ -39,68 +39,85 @@
                 color: white;
                 text-decoration:none;
             }
-        </style>
+    </style>
     </head>
     <body>
-    <h1>PROJECTS FOR PRACTICE </h1>
-    <div>
-    <H2>
-        Project 1: Personal Introduction Page
-    </H2>
-    <pre>
-    &lt;!DOCTYPE html&gt;
-    &lt;html&gt;
-    &lt;h3&gt;Hello, I'm Neha&lt;/h3&gt;
-    &lt;p&gt;I love coding, tea, and dogs.&lt;/p&gt;
-    &lt;/body&gt;
-    &lt;/html&gt;
-    </pre>
+     <h1>PROJECTS FOR PRACTICE </h1>
+     <div>
+     <h2>Project 1: Personal Introduction Page</h2>
+     <pre>
+       &lt;!DOCTYPE html&gt;
+        &lt;html&gt;
+         &lt;head&gt;
+          &lt;title&gt;Personal Introduction Page&lt;title&gt;
+         &lt;/head&gt;
+         &lt;body&gt;
+          &lt;h3&gt;Hello, I'm Neha&lt;/h3&gt;
+          &lt;p&gt;I love coding, tea, and dogs.&lt;/p&gt;
+         &lt;/body&gt;
+        &lt;/html&gt;
+     </pre>
+     </div>
+     <div>
+      <h2>Project 2: My Favourite Food List</h2>
+      <pre>
+       &lt;!DOCTYPE html&gt;
+        &lt;html&gt;
+         &lt;head&gt;
+          &lt;title&gt;My Favourite Food List&lt;/title&gt;
+         &lt;/head&gt;
+         &lt;body&gt;
+          &lt;h3&gt;My Favorite Foods&lt;/h3&gt;
+          &lt;p&gt;1. Poha&lt;br&gt;2.Roti&lt;br&gt;3. Dal&lt;/p&gt;
+         &lt;/body&gt;
+        &lt;/html&gt;
+      </pre>
+     </div>
+     <div>
+      <h2>Project 3: Daily Routine</h2>
+      <pre>
+        &lt;!DOCTYPE html&gt;
+         &lt;html&gt;
+          &lt;head&gt;
+           &lt;title&gt;Daily Routine&lt;/title&gt;
+          &lt;/head&gt;
+          &lt;body&gt;
+           &lt;h3&gt;My Daily Routine&lt;/h3&gt;
+           &lt;p&gt;Wake up → Study → Walk → Sleep&lt;/p&gt;
+          &lt;/body&gt;
+         &lt;/html&gt;
+      </pre>
     </div>
     <div>
-    <h2>Project 2: My Favourite Food List</h2>
-    <pre>
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;h3&gt;My Favorite Foods&lt;/h3&gt;
-&lt;p&gt;1. Poha&lt;br&gt;2.Roti&lt;br&gt;3. Dal&lt;/p&gt;
- &lt;/body&gt;
-&lt;/html&gt;
-    </pre>
-    </div>
-    <div>
-    <h2>Project 3: Daily Routine</h2>
-    <pre>
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;h3&gt;My Daily Routine&lt;/h3&gt;
-&lt;p&gt;Wake up → Study → Walk → Sleep&lt;/p&gt;
- &lt;/body&gt;
-&lt;/html&gt;
-    </pre>
-    </div>
-    <div>
- <h2>Project 4: My Hobbies</h2>
-    <pre>
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;h3&gt;My Hobbies&lt;/h3&gt;
-&lt;p&gt;Designing&lt;br&gt; Coding&lt;br&gt; Reading&lt;/p&gt;
- &lt;/body&gt;
-&lt;/html&gt;
-    </pre>
-    </div>
-    <div>
-<h2>Project 5: Quotes of the Day</h2>
-<pre>
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;head&gt;
-&lt;h3&gt;Quote of the Day&lt;/h3&gt;
-&lt;p&gt;"Believe in yourself and all that you are."&lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</pre>
-</div>
+      <h2>Project 4: My Hobbies</h2>
+      <pre>
+        &lt;!DOCTYPE html&gt;
+         &lt;html&gt;
+          &lt;head&gt;
+           &lt;title&gt;My Hobbies&lt;/title&gt;
+          &lt;/head&gt;
+          &lt;body&gt;
+           &lt;h3&gt;My Hobbies&lt;/h3&gt;
+           &lt;p&gt;Designing&lt;br&gt; Coding&lt;br&gt; Reading&lt;/p&gt;
+          &lt;/body&gt;
+         &lt;/html&gt;
+      </pre>
+      </div>
+      <div>
+       <h2>Project 5: Quotes of the Day</h2>
+       <pre>
+         &lt;!DOCTYPE html&gt;
+          &lt;html&gt;
+           &lt;head&gt;
+            &lt;title&gt;Quotes of the Day&lt;/title&gt;
+           &lt;/head&gt;
+           &lt;body&gt;
+            &lt;h3&gt;Quote of the Day&lt;/h3&gt;
+            &lt;p&gt;"Believe in yourself and all that you are."&lt;/p&gt;
+           &lt;/body&gt;
+          &lt;/html&gt;
+       </pre>
+       </div>
 <br><br>
 <button><a href="html1intropracticalquestions.html">Previous</a></button>
 <button><a href="html1introprojectpracticequestion.html">Next</a></button>
