--- a/html2basictagsmcq.html
+++ b/html2basictagsmcq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HTML ELEMENTS MCQ QUESTIONS</title>
+        <title>HTML ELEMENTS EXERCISE</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="html1introductionmcq.css" rel="stylesheet">
