--- a/html3textformatting.html
+++ b/html3textformatting.html
@@ -45,5 +45,19 @@
         <h4>Explanation:</h4>
         <p>The word "read" is bold and sematically important (screen readers also emphasize it).</p>
         </div>
+        <br><br><hr><br><br>
+
+        <div class="option">
+            <a href="html3textformattiongmcq.html">HTML TEXT FORMATTING EXERCISE</a>
+            </div>
+            <div class="option">
+            <a href="html3textformattionpracticalexamples.html">HTML TEXT FORMATTING PRACTICAL EXAMPLES</a>
+            </div>
+            <div class="option">
+            <a href="html3textformattiongpracticalquestions.html">HTML TEXT FORMATTING PRCATICAL EXERCISE</a>
+            </div>
+            <div class="option">
+            <a href="html3textformattiongpracticalexamples.html">HTML TEXT FORMATTING MINI PROJECT QUESTIONS</a>
+        </div>
     </body>
 </html>
