--- a/subjects.html
+++ b/subjects.html
@@ -12,15 +12,19 @@
     <h1>SUBJECTS</h1>
   </header>
     <div class="main">
-<a href="#" ><div class="div2"> Fundamental Networks</div></a>
-<a href="#"><div class="div2">Operating Systems</div></a>
-<a href="#"><div class="div2">DSA</div></a>
-<a href="#"><div class="div2">SSAD</div></a>
-<a href="#"><div class="div2">DBMS</div></a>
-<a href="#"><div class="div2">ADBMS</div></a>
-<a href="#"><div class="div2">Software Testing Quality Assurance</div></a>
-<a href="#"><div class="div2">Linux</div></a>
-<a href="#"><div class="div2">Cloud Technology</div></a>
+<a href="cfn.html" ><div class="div2"> Computer Fundamentals and Networks</div></a>
+<a href="os.html"><div class="div2">Operating Systems</div></a>
+<a href="dsa.html"><div class="div2">DSA</div></a>
+<a href="ssad.html"><div class="div2">SSAD</div></a>
+<a href="blockchain.html"><div class="div2">Blockchain</div></a>
+<a href="dbms.html"><div class="div2">DBMS</div></a>
+<a href="iot.html"><div class="div2">Internet Of Things (IoT)</div></a>
+<a href="adbms.html"><div class="div2">ADBMS</div></a>
+<a href="stqa.html"><div class="div2">Software Testing Quality Assurance</div></a>
+<a href="uml.html"><div class="div2">Unified Modeling Language</div></a>
+<a href="linux.html"><div class="div2">Linux</div></a>
+<a href="dm.html"><div class="div2">Data Mining</div></a>
+<a href="ct.html"><div class="div2">Cloud Technology</div></a>
     </div>
     </body>
 </html>
