--- a/python1introduction.html
+++ b/python1introduction.html
@@ -7,6 +7,17 @@
         <link href="learn.css" rel="stylesheet">
     </head>
     <body>
+          <div style="display:flex">
+            <div class="main1">
+        <a href="python1introduction.html"><div class="hoverc">Introduction to Python</div></a><br><hr>
+        <a href="#"><div class="hoverc">Conditional Control Statement</div></a><br><hr>
+        <a href="#"><div class="hoverc">Function</div></a><br><hr>
+        <a href="#"><div class="hoverc">Strings</div></a><br><hr>
+        <a href="#"><div class="hoverc">Module</div></a><br><hr>
+        <a href="#"><div class="hoverc">File Handling</div></a><br><hr>
+        <a href="#"><div class="hoverc">Errors and Exception</div></a><br><hr>
+        <a href="#"><div class="hoverc">Introduction to Object-oriented concept in Python</div></a><hr>
+        </div>
     <div class="main">
         <h1>Introduction to Python</h1>
         <h2>Introduction:</h2>
@@ -54,7 +65,24 @@
         <ul>
             <li>Large number of programming languages exist (C, C++, Java, etc.), but <strong>Python is simpler and faster.</strong></li>
             <li>Uses <strong>fewer lines of code</strong> for the same task - saves time.</li>
+            <li>Has <strong>pre-written libraries</strong> and modules for reuse.</li>
+            <li>Good choice for <strong>beginners</strong> and professionals.</li>
+            <li>Reduces development effort and errors.</li>
+            <li>Can be applied in many areas: <strong>web apps, AI, games, scientific computing, data analysis.</strong></li>
         </ul>
+        <br><br><hr><br><br>
+        <h2>Installation of Python</h2>
+        <ol>
+            <li>Visit <a href="https://python.org">python.org</a></li>
+            <li>Go to <strong>Downloads</strong> - choose the latest version for your OS (e.g., Windows, Mac, Linux).</li>
+            <li>Download and run the installer.</li>
+            <li>Tick <strong>"Add Python to PATH"</strong> and click <strong>Install Now</strong>.</li>
+            <li>Verify installation:</li>
+            <ul>
+                <li>Open Command Prompt/Terminal - type <span>python version</span></li>
+                <li>It should display the installed version.</li>
+            </ul>
+        </ol>
     </div>
     </body>
 </html>
