--- a/html3textformatting.html
+++ b/html3textformatting.html
@@ -7,6 +7,19 @@
         <link href="learn.css" rel="stylesheet">
     </head>
     <body>
+          <div style="display:flex">
+         <div class="main1">
+       <a href="html1introduction.html"><div class="hoverc ">HTML INTRODUCTION</div></a><br><hr>
+        <a href="html2basictags.html"><div class="hoverc">HTML BASIC TAGS</div></a><br><hr>
+       <a href="html3textformatting.html"><div class="hoverc">HTML TEXT FORMATTING</div></a><br><hr>
+       <a href="html4lists.html"><div class="hoverc">HTML LISTS</div></a><br><hr>
+       <a href="html5linksandimages.html"><div class="hoverc">HTML LINKS AND IMAGES</div></a><br><hr>
+        <a href="html6tables.html"><div class="hoverc">HTML TABLES</div></a><br><hr>
+        <a href="html7formsandinputs.html"><div class="hoverc">HTML FORMS AND INPUTS</div></a><br><hr>
+        <a href="html8mediaelements.html"><div class="hoverc">HTML MEDIA ELEMENTS</div></a><br><hr>
+       <a href="html9sematicelements.html"><div class="hoverc">HTML SEMATIC ELEMENTS</div></a><br><hr>
+        <a href="html10htmlapladvanced.html"><div class="hoverc">HTML API </div></a><hr>
+    </div>
         <div class="main">
     <h1>HTML TEXT FORMATTING</h1>
     
@@ -46,7 +59,7 @@
         <p>The word "read" is bold and sematically important (screen readers also emphasize it).</p>
         </div>
         <br><br><hr><br><br>
-
+        </div>
         <div class="option">
             <a href="html3textformattiongmcq.html">HTML TEXT FORMATTING EXERCISE</a>
             </div>
