--- a/html1introduction.html
+++ b/html1introduction.html
@@ -73,17 +73,20 @@
     </ul>
 </div>
 <br><br><hr><br><br>
+</div>
+<div class="main1">
 <div class="option">
 <a href="html1introductionmcq.html">HTML INTRODUCTION EXERCISE</a>
-</div>
+</div><br>
 <div class="option">
 <a href="html1intropracticalexamples.html">HTML INTRODUCTION PRACTICAL EXAMPLES</a>
-</div>
+</div><br>
 <div class="option">
 <a href="html1intropracticalquestions.html">HTML INTRODUCTION PRACTICAL EXERCISE</a>
-</div>
+</div><br>
 <div class="option">
 <a href="html1intropracticalprojects.html">HTML INTRODUCTION MINI PROJECT QUESTIONS</a>
+</div>
 </div>
 </div>
 <br><br>
