--- a/html2basictags.html
+++ b/html2basictags.html
@@ -152,13 +152,14 @@
     </ul>
 </div>
 <br><br><hr><br><br>
-
+</div>
+<div class="main1">
 <div class="option">
     <a href="html2basictagsmcq.html">HTML BASIC TAGS EXERCISE </a>
-</div>
+</div><br>
 <div class="option">
-<a href="html2basictagspracticalexamples.html">HTML BASIC TAGS PRACTICAL EXAMPLES</a>
-</div>
+<a href="html2basictagspracticalexamples.html">HTML BASIC TAGS PRACTICAL EXAMPLES</a><br>
+</div><br>
 <div class="option">
 <a href="html2basictagspracticalquestions.html">HTML BASIC TAGS PRACTICAL EXERCISE</a>
 </div>
