--- a/html3textformatting.html
+++ b/html3textformatting.html
@@ -57,20 +57,22 @@
         </div>
         <h4>Explanation:</h4>
         <p>The word "read" is bold and sematically important (screen readers also emphasize it).</p>
-        </div>
+     </div>
         <br><br><hr><br><br>
-        </div>
+        <div class="main1">
         <div class="option">
-            <a href="html3textformattiongmcq.html">HTML TEXT FORMATTING EXERCISE</a>
-            </div>
+           <a href="html3textformattiongmcq.html">HTML TEXT FORMATTING EXERCISE</a>
+            </div><br>
             <div class="option">
             <a href="html3textformattionpracticalexamples.html">HTML TEXT FORMATTING PRACTICAL EXAMPLES</a>
-            </div>
+            </div><br>
             <div class="option">
             <a href="html3textformattiongpracticalquestions.html">HTML TEXT FORMATTING PRCATICAL EXERCISE</a>
-            </div>
+            </div><br>
             <div class="option">
             <a href="html3textformattiongpracticalexamples.html">HTML TEXT FORMATTING MINI PROJECT QUESTIONS</a>
+        </div>
+        </div>
         </div>
     </body>
 </html>
