--- a/html4lists.html
+++ b/html4lists.html
@@ -7,6 +7,40 @@
         <link href="learn.css" rel="stylesheet">
     </head>
     <body>
+         <div style="display:flex">
+         <div class="main1">
+       <a href="html1introduction.html"><div class="hoverc ">HTML INTRODUCTION</div></a><br><hr>
+        <a href="html2basictags.html"><div class="hoverc">HTML BASIC TAGS</div></a><br><hr>
+       <a href="html3textformatting.html"><div class="hoverc">HTML TEXT FORMATTING</div></a><br><hr>
+       <a href="html4lists.html"><div class="hoverc">HTML LISTS</div></a><br><hr>
+       <a href="html5linksandimages.html"><div class="hoverc">HTML LINKS AND IMAGES</div></a><br><hr>
+        <a href="html6tables.html"><div class="hoverc">HTML TABLES</div></a><br><hr>
+        <a href="html7formsandinputs.html"><div class="hoverc">HTML FORMS AND INPUTS</div></a><br><hr>
+        <a href="html8mediaelements.html"><div class="hoverc">HTML MEDIA ELEMENTS</div></a><br><hr>
+       <a href="html9sematicelements.html"><div class="hoverc">HTML SEMATIC ELEMENTS</div></a><br><hr>
+        <a href="html10htmlapladvanced.html"><div class="hoverc">HTML API </div></a><hr>
+    </div>
+    <div>
     <h1>HTML LISTS</h1>
+    <h2>HTML List</h2>
+    <p>In HTML,  lists are used to group sets of related items.</p>
+    <p>There are <strong>3 types of lists</strong> in HTML</p>
+    <br>
+    <h2>1. Ordered List (&lt;ol&gt;)</h2>
+    <ul>
+        <li>Displayed items in numbered order</li>
+        <li>Used when sequence matters (eg :- Steps, instructions)</li>
+    </ul>
+    <div>
+        <h3>Syntax:-</h3>
+        <pre class="code">
+&lt;ol&gt;
+    &lt;li&gt;Wake Up&lt;/li&gt;
+    &lt;li&gt;Brush teeth&lt;/li&gt;
+    &lt;li&gt;Study&lt;/li&gt;
+&lt;/ol&gt;
+        </pre>
+    </div>
+    </div>
     </body>
 </html>
